--- a/1_01_Arithmetic_Variables_and_Strings.ipynb
+++ b/1_01_Arithmetic_Variables_and_Strings.ipynb
@@ -80,6 +80,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Numbers"
+      ],
+      "metadata": {
+        "id": "enbodJxECxlH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Numbers in Python work like numbers everywhere. Everything you have learned in Maths can be done in python too! \n",
         "\n",
         "You have whole numbers (integers), decimals (floats), negative numbers"
@@ -165,6 +174,15 @@
           "execution_count": 5
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Operators"
+      ],
+      "metadata": {
+        "id": "Hwl69ZlRC4nb"
+      }
     },
     {
       "cell_type": "markdown",
@@ -302,7 +320,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Modulus\n",
+        "### Modulus\n",
         "\n",
         "The modulus shows you the remainder of a division (%)"
       ],
@@ -568,7 +586,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Adding and Multiplying Strings\n",
+        "## Adding and Multiplying Strings\n",
+        "\n",
+        "> Indented block\n",
+        "\n",
+        "\n",
         "\n",
         "Python lets you add and mutliply strings together. However, you cannot subtract or divide strings "
       ],
@@ -718,7 +740,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Inserting values in strings\n",
+        "## Inserting values in strings\n",
         "\n",
         "If you want to display a message using the contents of a variable, you can embed the values using an **f-string and {}**\n",
         "\n",
@@ -784,7 +806,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Indexing and Slicing Strings\n",
+        "## Indexing and Slicing Strings\n",
         "\n",
         "Indexing allows you to select individual letters in a string by using numbers. The first letter of any string is 0. The next is 1, and so on. The index of the last letter will be -1. \n",
         "\n",
@@ -1014,6 +1036,17 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "g8KfaBedDRzV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "2. Print downward Half-Pyramid Pattern with the letter a\n",
@@ -1030,6 +1063,17 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "eLpoKFirDS6L"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "3. Create a string made of the first, middle and last name \n",
@@ -1042,7 +1086,8 @@
         "\n",
         "full name \n",
         "\n",
-        "Ex. \n",
+        "---\n",
+        "Example\n",
         "\n",
         "input:\n",
         "\n",
@@ -1057,6 +1102,17 @@
       "metadata": {
         "id": "4qP_AAIHExqb"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "mFxiN6UTDTty"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
