--- a/1_01_Arithmetic_Variables_and_Strings.ipynb
+++ b/1_01_Arithmetic_Variables_and_Strings.ipynb
@@ -332,9 +332,11 @@
       "cell_type": "code",
       "source": [
         "# Divide 100 by 10\n",
-        "100/10\n",
         "\n",
-        "# What is the remainder?"
+        "\n",
+        "\n",
+        "# What is the remainder?\n",
+        "\n"
       ],
       "metadata": {
         "id": "hnOKnhh7pgGX"
@@ -348,7 +350,8 @@
         "# Divide 100 by 6\n",
         "\n",
         "\n",
-        "#What is the remainder?"
+        "#What is the remainder?\n",
+        "\n"
       ],
       "metadata": {
         "id": "_-Qn-DoTpnMP"
@@ -359,7 +362,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Now use the modulus to find the reaminder of 100 divided by 6\n"
+        "# Now use the modulus to find the reaminder of 100 divided by 6\n",
+        "\n"
       ],
       "metadata": {
         "id": "c6XYXKMgpuyf"
@@ -396,7 +400,6 @@
       "cell_type": "code",
       "source": [
         "# Create the variable named fred\n",
-        "\n",
         "\n",
         "fred = 200"
       ],
@@ -616,7 +619,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# print all the different variations of hello world to see the difference"
+        "# print all the different variations of hello world to see the difference\n",
+        "\n"
       ],
       "metadata": {
         "id": "YjHkwTuw2Eqq"
@@ -643,7 +647,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# print one and two\n"
+        "# print one and two\n",
+        "\n"
       ],
       "metadata": {
         "id": "ejqyCOH9116d"
@@ -872,7 +877,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Crrate a word and find the 2nd, 4th and 5th letters in that word\n",
+        "# Create a word and find the 2nd, 4th and 5th letters in that word\n",
         "\n"
       ],
       "metadata": {
@@ -943,7 +948,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Create the word 'california' and slice the word to print the word 'for'\n",
+        "# Create a variable of the word 'california' and slice the word to print the word 'for'\n",
         "\n"
       ],
       "metadata": {
@@ -955,7 +960,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Create the word 'racecar' and slice the word to print 'race'\n",
+        "# Create a variable of the word 'racecar' and slice the word to print 'race'\n",
         "\n"
       ],
       "metadata": {
@@ -967,7 +972,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Create the word 'racecar' and slice the word to print 'car'\n",
+        "# Create a variable of the word 'racecar' and slice the word to print 'car'\n",
         "\n"
       ],
       "metadata": {
@@ -979,7 +984,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Create the word 'garage' and slice the word to print 'rage'\n",
+        "# Create a variable of the word 'garage' and slice the word to print 'rage'\n",
         "\n"
       ],
       "metadata": {
@@ -1000,7 +1005,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. Calculate the multiplication and sum of two numbers\n",
+        "## 1. Calculate the multiplication and sum of two numbers\n",
         "\n",
         "Given two integers (whole numbers) return their product (multiplication) only if the product is equal to or lower than 100, else return their sum (addition).\n",
         "\n",
@@ -1038,7 +1043,8 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Answer to Challenge 1. \n",
+        "\n"
       ],
       "metadata": {
         "id": "g8KfaBedDRzV"
@@ -1049,7 +1055,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "2. Print downward Half-Pyramid Pattern with the letter a\n",
+        "## 2. Print downward Half-Pyramid Pattern with the letter a\n",
         "\n",
         "```a a a a a a\n",
         "a a a a a\n",
@@ -1065,7 +1071,9 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Answer to Challenge 2.\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "eLpoKFirDS6L"
@@ -1076,7 +1084,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "3. Create a string made of the first, middle and last name \n",
+        "## 3. Create a string made of the first, middle and last name \n",
         "\n",
         "input:\n",
         "\n",
@@ -1106,7 +1114,8 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Answer to Challenge 3. \n",
+        "\n"
       ],
       "metadata": {
         "id": "mFxiN6UTDTty"
@@ -1117,7 +1126,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "4. Create a string made of different letters in the string\n",
+        "## 4. Create a string made of different letters in the string\n",
         "\n",
         "* a) 'objections'   \n",
         "(2nd, 6th, 8th)\n",
@@ -1141,7 +1150,8 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Answer to Challenge 4. \n",
+        "\n"
       ],
       "metadata": {
         "id": "KbyvlJAfZFRK"
