--- a/1_02_Lists_User_Inputs_and_Control_Flows_.ipynb
+++ b/1_02_Lists_User_Inputs_and_Control_Flows_.ipynb
@@ -6,7 +6,7 @@
       "name": "1.02 Lists User Inputs and Control Flows .ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO13WpW7fLpr4KCyXX62wv9",
+      "authorship_tag": "ABX9TyO5FwivLzmdEccdF+u9faMX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Lists are ordered collections of items. They are placed in square brackets [], and are separated by commas.\n",
+        "Lists are ordered collections of items. They are placed in square brackets `[]`, and are separated by commas.\n",
         "\n",
         "A list can contain either numbers or string or BOTH. "
       ],
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "7fLh4TW-DwgN"
       },
@@ -93,7 +93,7 @@
       "metadata": {
         "id": "4-Jta7K7GQLq"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -229,7 +229,7 @@
         "\n",
         "```python\n",
         "items_sold = ['cake', 'cookies', 'bread']\n",
-        "items_sold_new = items_sold + ['biscuit', 'tarts'\n",
+        "items_sold_new = items_sold + ['biscuit', 'tarts']\n",
         "print(items_sold_new)\n",
         "```\n",
         "\n",
@@ -243,7 +243,7 @@
         "\n",
         "```python\n",
         "my_list = [1, 2, 3]\n",
-        "my_list + [4] \n",
+        "my_list += [4] \n",
         "\n",
         "print(my_list)\n",
         "```\n",
@@ -510,22 +510,10 @@
         "message = input()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "oehPGfbemmGL",
-        "outputId": "c7aefe33-3dcd-479d-9d43-80427218b3d6"
+        "id": "oehPGfbemmGL"
       },
-      "execution_count": 15,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Happy Monday\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -664,7 +652,7 @@
       "metadata": {
         "id": "R5h9peVq31v2"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -859,7 +847,7 @@
       "metadata": {
         "id": "qDyM0kxULB7P"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
